deployments/apps/kubeview/kubeview.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubeview
  namespace: apps
  labels:
    app: kubeview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeview
  template:
    metadata:
      labels:
        app: kubeview
    spec:
      serviceAccountName: kubeview
      containers:
        - name: kubeview-containers
          image: rebelinblue/kubeview:0.1.9
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "128M"
              cpu: "0.1"
---
kind: Service
apiVersion: v1
metadata:
  name: kubeview
  namespace: apps
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: kubeview
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeview
  namespace: apps
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth.infra.svc
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: kubeview.cluster.rebelinblue.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubeview
              servicePort: 80
  tls:
    - hosts:
        - kubeview.cluster.rebelinblue.com
      secretName: kubeview-tls
